# crank-nicolson-fdm

./: .gitignore  IMPLEMENTATION.md  README.md  main.py  pyproject.toml  requirements.txt  test.cpp
fdm_engine/: config.py
fdm_engine/benchmarks/: __init__.py  binomial_tree.py  convergence.py
fdm_engine/core/: boundary_conditions.py  grid.py
fdm_engine/greeks/: __init__.py  analytical.py  numerical.py
fdm_engine/models/: black_scholes.py
fdm_engine/solvers/: crank_nicolson.py  psor.py  tridiagonal.py
tests/: conftest.py  test_benchmarks.py  test_greeks.py  test_grid.py  test_solver.py
